replace sun.misc.BASE64Decoder/BASE64Encode to java.util.Base64 in Java8